--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -6,6 +6,26 @@
   "languages": "اللغات",
   "theme_mode": "السمة",
   "light": "فاتح",
-  "dark": "داكن"
+  "dark": "داكن",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "forget_password": "نسيت كلمة المرور؟",
+  "login": "تسجيل الدخول",
+  "dont_have_acc": "ليس لديك حساب ؟",
+  "create_acc": "أنشئ حساب",
+  "or": "أو",
+  "login_with_google": "تسجيل بإستخدام جوجل",
+  "reset_password": "إعادة تعيين كلمة المرور",
+  "register": "تسجيل",
+  "name": "الأسم",
+  "re_password": "إعادة تعيين كلمة المرور",
+  "already_have_acc": "هل لديك حساب بالفعل ؟",
+  "email_is_required": "مطلوب",
+  "pass_is_required": "مطلوبة",
+  "pls_confirm_ur_password": "الرجاء تأكيد كلمة المرور",
+  "enter_valid_email": "ادخل كلمة مرور صحيحة (مثل: example@mail.com)",
+  "password_instructions": "كلمة المرور يجب أن تحتوي علي حرف كبير و حرف صغير\nو رقم و رمز",
+  "password_not_match": "كلمات المرور غير متطابقة"
+
 
 }
