--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,6 +6,24 @@
     "languages": "Languages",
     "theme_mode": "Theme Mode",
     "light": "Light",
-    "dark": "Dark"
-
+    "dark": "Dark",
+    "email": "Email",
+    "password": "Password",
+    "forget_password": "Forget Password?",
+    "login": "Login",
+    "dont_have_acc": "Don't Have Account ?",
+    "create_acc": "Create Account",
+    "or": "Or",
+    "login_with_google": "Login With Google",
+    "reset_password": "Reset Password",
+    "register": "Register",
+    "name": "Name",
+    "re_password": "Re-Password",
+    "already_have_acc": "Already Have Account ?",
+    "pass_is_required": "is required",
+    "email_is_required": "is required",
+    "pls_confirm_ur_password": "Please confirm your password",
+    "enter_valid_email": "Enter a valid email (ex: example@mail.com)",
+    "password_instructions": "Password must contain uppercase, lowercase,\nnumber, and special character.",
+    "password_not_match": "Passwords do not match"
 }
