--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -7,6 +7,7 @@
   "theme_mode": "السمة",
   "light": "فاتح",
   "dark": "داكن",
+
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "forget_password": "نسيت كلمة المرور؟",
@@ -25,7 +26,35 @@
   "pls_confirm_ur_password": "الرجاء تأكيد كلمة المرور",
   "enter_valid_email": "ادخل كلمة مرور صحيحة (مثل: example@mail.com)",
   "password_instructions": "كلمة المرور يجب أن تحتوي علي حرف كبير و حرف صغير\nو رقم و رمز",
-  "password_not_match": "كلمات المرور غير متطابقة"
+  "password_not_match": "كلمات المرور غير متطابقة",
+
+  "welcome_back": "مرحباً بعودنك ✨",
+
+  "no_fav_events": "ليس لديك أي أحداث مفضلة حتي الأن",
+  "search": "بحث",
+
+  "logout": "تسجيل الخروج",
+
+  "create_event": "إنشاء حدث",
+  "edit_event": "تعديل حدث",
+  "add_event": "إضافة حدث",
+  "update_event": "تعديل حدث",
+  "event_created": "تم إنشاء الحدث",
+  "event_updated": "تم تعديل الحدث",
+  "something_went_wrong": "لقد حدث خطأ ما",
+  "title": "العنوان",
+  "event_item": "اسم الجدث",
+  "title_required": "الإسم مطلوب",
+  "description": "الوصف",
+  "event_description": "وصف الحدث",
+  "description_is_required": "الوصف مطلوب",
+  "event_date": "تاريخ الحدث",
+  "choose_date": "اختر التاريخ",
+  "event_time": "وقت الحدث",
+  "choose_time": "اختر الوقت",
+  "choose_loc": "اختر موقع الحدث"
+
+
 
 
 }
