Edited in some ThemeMode & language converting places

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -54,7 +54,7 @@
     "choose_time": "Choose Time",
     "choose_loc": "Choose Event Location",
 
-    "event_details": "Event Details",
+    "event_details": "Event Details"
 
 
 
