finishing localization & theme converting on On-Boarding Screen and edit event screen

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -52,7 +52,29 @@
   "choose_date": "اختر التاريخ",
   "event_time": "وقت الحدث",
   "choose_time": "اختر الوقت",
-  "choose_loc": "اختر موقع الحدث"
+  "choose_loc": "اختر موقع الحدث",
+
+  "event_details": "تفاصيل الحدث",
+  "confirm_del": "تأكيد الحذف",
+  "are_u_sure": "هل أنت متأكد أنك تريد حذف هذا الحدث؟",
+  "cancel": "إلغاء",
+  "delete": "حذف",
+
+  "language": "اللغة",
+  "theme": "المظهر",
+  "personalize": "خصص تجربتك",
+  "find_event": "اكتشف فعاليات تُلهمك",
+  "effortless": "تخطيط فعاليات بسهولة",
+  "connect": "تواصل مع الأصدقاء وشارك اللحظات",
+
+  "firstSettingsDescription": "اختر اللغة والمظهر المفضل لديك لتبدأ تجربة مريحة ومصممة خصيصًا لتناسب أسلوبك.",
+  "onBoarding1Description": "انغمس في عالم من الفعاليات المصممة لتناسب اهتماماتك الفريدة. سواء كنت من محبي الموسيقى الحية أو ورش العمل الفنية أو التواصل المهني أو مجرد اكتشاف تجارب جديدة، ستجد ما يناسبك. توصياتنا المختارة بعناية ستساعدك على الاستكشاف والتواصل والاستفادة من كل فرصة من حولك.",
+  "onBoarding2Description": "تخلص من عناء تنظيم الفعاليات باستخدام أدواتنا المتكاملة للتخطيط. من إعداد الدعوات وإدارة الردود وجدولة التذكيرات إلى تنسيق التفاصيل، نحن نوفر لك كل ما تحتاجه. خطط بسهولة وركز على ما هو أهم – خلق تجربة لا تُنسى لك ولضيوفك.",
+  "onBoarding3Description": "اجعل كل فعالية ذكرى لا تُنسى بمشاركتها مع الآخرين. منصتنا تتيح لك دعوة الأصدقاء، إبقاء الجميع على اطلاع، والاحتفال معًا. التقط وشارك اللحظات المميزة مع شبكتك لتستعيد الذكريات الجميلة دائمًا.",
+  "lets_start": "لنبدأ",
+
+  "skip": "تخطي"
+
 
 
 
