--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -54,8 +54,27 @@
     "choose_time": "Choose Time",
     "choose_loc": "Choose Event Location",
 
-    "event_details": "Event Details"
+    "event_details": "Event Details",
+    "confirm_del": "Confirm Deletion",
+    "are_u_sure": "Are you sure you want to delete this event ?",
+    "cancel": "Cancel",
+    "delete": "Delete",
 
+    "language": "Language",
+    "theme": "Theme",
+
+    "personalize": "Personalize Your Experience",
+    "find_event": "Find Events That Inspire You",
+    "effortless": "Effortless Event Planning",
+    "connect": "Connect with Friends & Share Moments",
+
+    "firstSettingsDescription": "Choose your preferred theme and language to get started with a comfortable, tailored experience that suits your style.",
+    "onBoarding1Description":  "Dive into a world of events crafted to fit your unique interests. Whether you're into live music, art workshops, professional networking, or simply discovering new experiences, we have something for everyone. Our curated recommendations will help you explore, connect, and make the most of every opportunity around you.",
+    "onBoarding2Description": "Take the hassle out of organizing events with our all-in-one planning tools. From setting up invites and managing RSVPs to scheduling reminders and coordinating details, we’ve got you covered. Plan with ease and focus on what matters – creating an unforgettable experience for you and your guests.",
+    "onBoarding3Description": "Make every event memorable by sharing the experience with others. Our platform lets you invite friends, keep everyone in the loop, and celebrate moments together. Capture and share the excitement with your network, so you can relive the highlights and cherish the memories.",
+    "lets_start": "Let's Start",
+
+    "skip": "Skip"
 
 
 
