--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -75,8 +75,9 @@
     "onBoarding3Description": "Make every event memorable by sharing the experience with others. Our platform lets you invite friends, keep everyone in the loop, and celebrate moments together. Capture and share the excitement with your network, so you can relive the highlights and cherish the memories.",
     "lets_start": "Let's Start",
 
-    "skip": "Skip"
+    "skip": "Skip",
 
+    "select_loc": "Tap on location to select"
 
 
 }
