Finishing all the places that needs Google Map in MapsView, CreateEvent, UpdateEvent and ViewEventDetails

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -76,7 +76,10 @@
 
   "skip": "تخطي",
 
-  "select_loc": "انقر علي الموقع للإختيار"
+  "select_loc": "انقر علي الموقع للإختيار",
+
+  "plz_enter_loc": "الرجاء ادخال كل عناصر الحدث"
+
 
 
 
