--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,7 +77,8 @@
 
     "skip": "Skip",
 
-    "select_loc": "Tap on location to select"
+    "select_loc": "Tap on location to select",
 
+    "plz_enter_loc": "Please Enter all the event attributes"
 
 }
