Updating some errors in UI and in Authentication logic

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,7 +77,7 @@
 
     "skip": "Skip",
 
-    "select_loc": "Tap on location to select",
+    "select_loc": "Long Press on location to select",
 
     "plz_enter_loc": "Please Enter all the event attributes"
 
